--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,10 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 // global
